--- a/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\DataAccessLayer\DataAccessLayer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Validators\" />
+  </ItemGroup>
+
 </Project>
