--- a/FUEverProject/appsettings.json
+++ b/FUEverProject/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=PHUC\\PHUC;Database=FueverDb;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
