--- a/FUEverProject/appsettings.json
+++ b/FUEverProject/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=PHUC\\PHUC;Database=FueverDb;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=FueverDb;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
