--- a/FUEverProject/appsettings.json
+++ b/FUEverProject/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=FueverDb;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=PHUC\\PHUC;Database=FueverDb;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Jwt": {
     "Key": "bbuosyJSSGPOosflUSJ75JJHst6yjjjST5rt65SY77uhSYSko098HHhgst",
