--- a/FUEverProject/appsettings.json
+++ b/FUEverProject/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=PHUC\\PHUC;Database=FueverDb;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=tcp:swd.database.windows.net,1433;Initial Catalog=FueverProjectAzure;Persist Security Info=False;User ID=tranminhphuc2k3;Password=0168686895aA@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Jwt": {
     "Key": "bbuosyJSSGPOosflUSJ75JJHst6yjjjST5rt65SY77uhSYSko098HHhgst",
